--- a/angular.json
+++ b/angular.json
@@ -67,6 +67,27 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "stag": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.stag.ts"
+                }
+              ],
+              "outputHashing": "all"
             }
           },
           "defaultConfiguration": "production"
@@ -79,6 +100,9 @@
             },
             "development": {
               "browserTarget": "platzi-store:build:development"
+            },
+            "stag": {
+              "browserTarget": "platzi-store:build:stag"
             }
           },
           "defaultConfiguration": "development"
