--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
     "@angular/core": "~12.0.1",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.0.1",
     "@angular/material": "^12.0.2",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "firebase": "^8.6.5",
     "flexboxgrid": "^6.3.1",
     "rxjs": "~6.6.0",
     "swiper": "^6.6.2",
