--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "./node_modules/flexboxgrid/dist/flexboxgrid.min.css",
-              "./node_modules/swiper/swiper.min.css",
+              "./node_modules/swiper/swiper-bundle.css",
               "src/styles.scss"
             ],
             "scripts": []
