--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "angular-svg-icon": "^12.0.0",
+    "bootstrap": "^5.0.1",
     "firebase": "^8.6.5",
     "flexboxgrid": "^6.3.1",
     "rxjs": "~6.6.0",
